--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 
             <div class="aside mb5 mt5 lg_tac">
               <p class="mt2 mb2 z15" globalize="title1_sub">Unlock Aramaic: The Free, Fun, and Effortless Way to
-                Learn!<span class="blink black"> |</span></p>
+                Learn!</p>
             </div>
 
             <div class="aside sm_pl4 lg_pl4 xl_pl5 lg_gan mt2 mb2 tac">
-              <img class="w100 pulsate" src="assets/img/icon_black.svg">
+              <img class="br50 w5r mb05 bos5 red bw3 shade2 pulsate m0a" src="https://www.aramean.institute/favicon.ico">
               <div class="gap1- lg_gap0- mt2 lg_w100p- xm_z12">
-                <a target="_blank" href="" class="button bos8 bw1 xm_w100p mb1">Download</a>
-                <a href="register.html" class="button bcred white black_h xm_w100p mb1" globalize-get="get_started">Get started</a>
+                <a href="register.html" class="button bcred white black_h xm_w100p mb1" globalize-get="get_started">Get started</a><br>
+                <a target="_blank" href="" class="button xm_w100p mb1">I already have an account</a>
               </div>
             </div>
 
