--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 </head>
 
 <body class="light">
-  <div id="navloader" class="navloader pa t0 w100 bcblack03 h2px" hide>
-    <div class="bcblack08"></div>
-  </div>
+  <div id="navloader" class="navloader pa t0 w100 bcblack03 h2px" hide><div class="bcblack08"></div></div>
   <header>
     <select name="language" class="p1 m0a fs08 tac" onvaluechange="globalize-set">
       <option selected disabled globalize-get>Change language</option>
