--- a/index.html
+++ b/index.html
@@ -30,22 +30,23 @@
   <main class="bcwhite flc">
     <article class="">
       <section>
-        <div class="tac w100">
-          <h1 class="z09 dimgray" globalize-get="title">Aramaic Academy</h1>
-        </div>
         <section class="h100 mnauto">
+
           <div class="grid w80w flc">
 
             <div class="aside mb5 mt5 lg_tac">
-              <p class="mt2 mb2 z15" globalize="title1_sub">Unlock Aramaic: The Free, Fun, and Effortless Way to
+              <div class="tac w100">
+                <img class="br50 w5r mb05 bos5 red bw3 shade2 pulsate m0a" src="https://www.aramean.institute/favicon.ico">
+                <h1 class="fs2 dimgray" globalize-get="title">Aramaic Academy</h1>
+              </div>
+              <p class="mb2 z15 fs09 tac" globalize="title1_sub">Unlock Aramaic: The Free, Fun, and Effortless Way to
                 Learn!</p>
             </div>
 
             <div class="aside sm_pl4 lg_pl4 xl_pl5 lg_gan mt2 mb2 tac">
-              <img class="br50 w5r mb05 bos5 red bw3 shade2 pulsate m0a" src="https://www.aramean.institute/favicon.ico">
               <div class="gap1- lg_gap0- mt2 lg_w100p- xm_z12">
-                <a href="register.html" class="button bcred white black_h xm_w100p mb1" globalize-get="get_started">Get started</a><br>
-                <a target="_blank" href="" class="button xm_w100p mb1">I already have an account</a>
+                <button href="register.html" paddingright="2rem" paddingleft="2rem" class="button br1 lh2 bcred white black_h xm_w100p mb1" globalize-get="get_started" uppercase>Get started</button><br>
+                <a href="#" class="button xm_w100p mb1">I already have an account</a>
               </div>
             </div>
 
@@ -54,19 +55,10 @@
 
 
       </section>
-      <section>
-        <form id="form" method="get" action="search.html" target="_top" class="mt1 mb5 pr">
-          <input type="text" name="q" id="q" class="bs1 p1 h3 br05 dark white w100 w100 pr3 bs0"
-            globalize-get="input_search" globalize-target="placeholder" onsetvalue="focus" onfocused="select:[0,10]"
-            autocomplete="off" focus>
-          <input type="submit" class="bos0 bc0 white p1 h3 br05 w4 icon icon16 pa r0" value="&#128269;">
-        </form>
-      </section>
-      <p class="w100 z09" globalize="current_version:">Current version: <b metacontent="version">0.0.33</b></p>
     </article>
   </main>
   <aside ontoggle="toggle.class[pf t0 r0 h100p zi50]" class="dark *_dn"></aside>
-  <footer></footer>
+  <footer><p class="p05 w100 z08 tac" globalize="current_version:">Current version: <b metacontent="version">0.1</b></p></footer>
 </body>
 
 </html>
