--- a/register.html
+++ b/register.html
@@ -17,6 +17,7 @@
       class="bcwhite" 
       data-set="iso:iso"
       id="animate{iso}"
+      href="map.html?l={iso}"
       animate-key="0;50;100"
       animate-transform="scale(1);scale(1.25);scale(1)"
       animate-easing="ease-in-out"
