--- a/map.html
+++ b/map.html
@@ -26,7 +26,7 @@
     data-iterate="true"
     globalize-onsetload="rerun"
     >
-    <a class="bcwhite cards br50" data-set="id:id" href="./search.html?category={id}">
+    <a class="bcwhite cards br50" data-set="id:id" href="./search.html?category={id}" mapclass="{id}">
       <figure class="p1 tac">
         <i class="icon icon32">&#9733;</i>
         <small class="f2 z08" margintop="10" bindglobal="l:globalize.code" data-get="word.{l}" uppercase></small>
