--- a/map.html
+++ b/map.html
@@ -18,17 +18,15 @@
   </div>
   <hr class="shade1">
   <div
-    id="categories"
-    class="br50 cards mt05 mb1 gut2- br05- xs_gtc2 xm_gtc2 md_gtc3 lg_gtc4 xl_gtc5 xxl_gtc6 xxxl_gtc7 br0- flc-"
     bindasset="apikey:api.api_key;endpoint:api.words.endpoint"
     data-src="{endpoint}?select=id,word&and=(taxonomy.is.null)"
     data-header="apikey:{apikey};Prefer:count=exact"
     data-iterate="true"
     globalize-onsetload="rerun"
     >
-    <a class="bcwhite cards br50" data-set="id:id" href="./search.html?category={id}" mapclass="{id}">
-      <figure class="p1 tac">
-        <i class="icon icon32">&#9733;</i>
+    <a data-set="id:id" href="./search.html?category={id}" mapclass="{id}" width="7rem" height="7rem" radius="50%">
+      <figure class="p1 tac fdc">
+        <i class="icon icon32 fdc">&#9733;</i>
         <small class="f2 z08" margintop="10" bindglobal="l:globalize.code" data-get="word.{l}" uppercase></small>
       </figure>
     </a>
