--- a/map.html
+++ b/map.html
@@ -24,10 +24,24 @@
     data-iterate="true"
     globalize-onsetload="rerun"
     >
-    <a data-set="id:id" href="./search.html?category={id}" mapclass="{id}" width="7rem" height="7rem" radius="50%">
-      <figure class="p1 tac fdc">
-        <i class="icon icon32 fdc">&#9733;</i>
-        <small class="f2 z08" margintop="10" bindglobal="l:globalize.code" data-get="word.{l}" uppercase></small>
+    <a
+      data-set="id:id"
+      href="./search.html?category={id}"
+      mapclass="{id}"
+      mapmargin="{id}"
+      width="6rem"
+      height="6rem"
+      radius="50%"
+      animate-key="0;50;100"
+      animate-transform="scale(1);scale(1.1);scale(1)"
+      animate-easing="ease-in-out"
+      animate-duration="1s"
+      animate-iteration="infinite"
+      mouseover="animate-start"
+      mouseout="animate-stop">
+      <figure class="p05 tac fdc">
+        <i class="icon icon24 fdc">&#9733;</i>
+        <small class="f2 z07" margintop="5" bindglobal="l:globalize.code" data-get="word.{l}" uppercase></small>
       </figure>
     </a>
   </div>
