--- a/map.html
+++ b/map.html
@@ -41,7 +41,7 @@
       mouseout="animate-stop">
       <figure class="p05 tac fdc">
         <i class="icon icon24 fdc">&#9733;</i>
-        <small class="f2 z07" margintop="5" bindglobal="l:globalize.code" data-get="word.{l}" uppercase></small>
+        <small class="f2 z07" bindglobal="l:globalize.code" data-get="word.{l}" uppercase></small>
       </figure>
     </a>
   </div>
