--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <div class="aside sm_pl4 lg_pl4 xl_pl5 lg_gan mt2 mb2 tac">
               <div class="gap1- lg_gap0- mt2 lg_w100p- xm_z12">
-                <button href="register.html" paddingright="2rem" paddingleft="2rem" class="button br1 lh2 bcred white black_h xm_w100p mb1" globalize-get="get_started" uppercase>Get started</button><br>
+                <button href="register.html" paddingright="2rem" paddingleft="2rem" lineheight="2.5rem" class="button br1 lh2 bcred white black_h xm_w100p mb1" globalize-get="get_started" uppercase>Get started</button><br>
                 <a href="#" class="button xm_w100p mb1">I already have an account</a>
               </div>
             </div>
