--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </article>
   </main>
   <aside ontoggle="toggle.class[pf t0 r0 h100p zi50]" class="dark *_dn"></aside>
-  <footer><p class="p05 w100 z08 tac" globalize="current_version:">Current version: <b metacontent="version">0.1</b></p></footer>
+  <footer></footer>
 </body>
 
 </html>
