--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="version" content="1.0.0">
-  <script src="https://cdn.front.nu/nightly/front.js" module="globalize;chronotize;data;navigate;keyboard;animate;canvas"
-    var="api;enum" conf="debug:false;debugLocalhost:true;varsDir:assets/json/vars;storageKey:academy"
+  <script src="https://code.responsivevoice.org/responsivevoice.js?key=HoGHbU9L"></script>
+  <script src="https://cdn.front.nu/nightly/front.js"
+    module="globalize;chronotize;data;navigate;keyboard;animate;canvas"
+    var="api;enum"
+    plugin="responsivevoice"
+    conf="debug:false;debugLocalhost:true;varsDir:assets/json/vars;storageKey:academy"
     globalize-conf="folder:assets/json/locales" navigate-conf="startpage:/;startpageLocal:academy">
     </script>
   <link type="text/css" href="https://cdn.front.nu/dist/front.css" rel="stylesheet">
