--- a/learn.html
+++ b/learn.html
@@ -1,9 +1,9 @@
 <script src="https://cdn.front.nu/nightly/front.js"></script>
-<title>Search</title>
-<template srcdoc="../index" src="../templates/search"></template>
+<title>Learn</title>
+<template srcdoc="../index" src="../templates/learn"></template>
 <h1 class="tac" marginbottom="2rem">Which one of these is ""?</h1>
 <div
   bindasset="endpoint:api.words.endpoint"
   bindvar="src:{endpoint}?select=*&word->>{l}=ilike.{q}*"
-  include="includes/search.html">
+  include="includes/learn.html">
 </div>
