--- a/learn.html
+++ b/learn.html
@@ -4,7 +4,8 @@
 <section class="df fdc h100 jcc">
   <div
     bindasset="endpoint:api.new.endpoint"
-    bindvar="src:{endpoint}?taxonomy_param=60&questions=3"
+    bindquery="c:c"
+    bindvar="src:{endpoint}?taxonomy_param={c}&questions=3"
     include="includes/learn.html">
   </div>
 </section>
