--- a/map.html
+++ b/map.html
@@ -50,7 +50,7 @@
     <a
       flex
       data-set="id:id"
-      href="./learn.html?category={id}"
+      href="./learn.html?c={id}"
       mapclass="{id}"
       mapmargin="{id}"
       width="6rem"
