--- a/learn.html
+++ b/learn.html
@@ -4,8 +4,8 @@
 <section class="df fdc h100 jcc">
   <div
     bindasset="endpoint:api.new.endpoint"
-    bindquery="c:c"
-    bindvar="src:{endpoint}?taxonomy_param={c}&questions=3"
+    bindquery="c:c;p:p"
+    bindvar="src:{endpoint}?taxonomy_param={c}&page_number={p:1}&page_size=3"
     include="includes/learn.html">
   </div>
 </section>
