--- a/learn.html
+++ b/learn.html
@@ -5,7 +5,7 @@
   <div
     bindasset="endpoint:api.new.endpoint"
     bindquery="c:c;p:p"
-    bindvar="src:{endpoint}?taxonomy_param={c}&page_number={p:1}"
+    bindvar="src:{endpoint}?taxonomy_param={c}&number={p:1}&size=4"
     include="includes/learn.html">
   </div>
 </section>
