--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="version" content="1.0.0">
   <script src="https://cdn.front.nu/nightly/front.js"
-    module="globalize;chronotize;data;navigate;keyboard;animate;canvas;math"
+    module="globalize;chronotize;data;navigate;keyboard;animate;canvas;math;sound"
     var="api;enum"
     plugin="responsivevoice"
     conf="debug:false;debugLocalhost:true;varsDir:assets/json/vars;storageKey:academy"
