--- a/register.html
+++ b/register.html
@@ -24,7 +24,8 @@
       animate-duration="1s"
       animate-iteration="infinite"
       mouseover="animate-start"
-      mouseout="animate-stop">
+      mouseout="animate-stop"
+      click="audio-play:[assets/audio/click.wav]">
       <figure class="p1 tac light">
         <img class="br05" data-set="iso:iso" setsrc="assets/img/{iso}.gif" width="100%">
         <small class="f1" margintop="10" data-set="iso:iso" data-get="language.{iso}_lat" bold></small>
